# Cheap_Laser_Harp

./: .gitignore  .gitinore  README.md
Arduino_micro/MIDIUSB_write_instrument_laser/: MIDIUSB_write_instrument_laser.ino
Arduino_micro/MIDIUSB_write_test/: MIDIUSB_write_test.ino
IHM_instrument_laser/: EngineLaser.cpp  EngineLaser.h  LASER.pro  MainWindow.cpp  MainWindow.h  RecentFiles.cpp  RecentFiles.h  configFile.cpp  configFile.h  configfile.cpp  configfile.h  main.cpp  mainwindow.ui  recentfiles.cpp  recentfiles.h
IHM_instrument_laser/example_files/: config.json  config_what_is_love.json
LASER soutenance #1/: EngineLaser.cpp  EngineLaser.h  LASER.pro  MainWindow.cpp  app.rc  ressource.qrc  ressources.qrc
cpp/Harpe_laser_proto/: CMakeLists.txt  PianoKey.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  piano_ui.cpp  piano_ui.h  tsf.h
cpp/examples/proto_tsf_RtMidi/: main.cpp
